[package]
name = "sip"
# When releasing to crates.io:
# - Update html_root_url in lib.rs.
# - Update CHANGELOG.md.
# - Create git tag
version = "0.0.1"
readme = "README.md"
documentation = "https://docs.rs/sip"
repository = "https://github.com/horacimacias/sip"
license = "MIT/Apache-2.0"
authors = [
  "Alex Crichton <alex@alexcrichton.com>",
  "Carl Lerche <me@carllerche.com>",
  "Sean McArthur <sean@seanmonstar.com>",
]
description = """
A set of types for representing SIP requests and responses.
"""
keywords = ["http"]
categories = ["web-programming"]
edition = "2018"

[dependencies]
http = "0.2.4"

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"